Form captions now visible in Opera. Fixes #2238
svn changeset:6030/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/formlayout/formlayout.css
+++ b/WebContent/ITMILL/themes/default/formlayout/formlayout.css
@@ -8,6 +8,9 @@
 	text-align:right;
 	white-space: nowrap;
 }
+.i-formlayout-captioncell .i-caption {
+	overflow: visible;
+}
 
 .i-formlayout-contentcell {
 	width:100%;
