--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -679,6 +679,9 @@ input.i-modified,
 	text-align:right;
 	white-space: nowrap;
 }
+.i-formlayout-captioncell .i-caption {
+	overflow: visible;
+}
 
 .i-formlayout-contentcell {
 	width:100%;
